<resources>
    <string name="app_name">CHelper</string>
    <string name="old2new_ime_name">命令转换输入法</string>
    <string name="common_icon_jump_content_description">跳转</string>
    <string name="common_icon_back_content_description">返回</string>
    <string name="common_icon_copy_content_description">复制</string>
    <string name="common_icon_like_content_description">点赞</string>
    <string name="common_copyright_yancey">Copyright \u00a9 2025 Yancey</string>
    <string name="common_powered_by_avery_chims">Powered by Avery Chims</string>
    <string name="common_powered_by_openlans">Powered by OpenLANS</string>
    <string name="example_content">内容</string>
    <string name="example_name">名字</string>
    <string name="example_description">这是一段简单的介绍</string>
    <string name="example_author">作者名字</string>
    <string name="example_version">1.0.0</string>
    <string name="example_tags">标签示例</string>
    <string name="example_like_count">520</string>
    <string name="dialog_input_string_title">温馨提示</string>
    <string name="dialog_input_string_input_hint">点我输入内容</string>
    <string name="dialog_input_string_cancel">取消</string>
    <string name="dialog_input_string_confirm">确认</string>
    <string name="dialog_is_confirm_title">温馨提示</string>
    <string name="dialog_is_confirm_cancel">取消</string>
    <string name="dialog_is_confirm_confirm">确认</string>
    <string name="dialog_policy_grant_title">隐私政策</string>
    <string name="dialog_policy_grant_message_if_unread">为保障您的权益，请阅读并同意《CHelper 隐私政策》，了解我们如何收集、使用您的信息。</string>
    <string name="dialog_policy_grant_message_if_updated">我们更新了《CHelper 隐私政策》，请务必仔细阅读以清晰了解您的权利与数据处理规则变化。</string>
    <string name="dialog_policy_grant_confirm_read">我已阅读并同意。</string>
    <string name="dialog_policy_grant_read_privacy_policy">去阅读</string>
    <string name="dialog_policy_grant_confirm">确认</string>
    <string name="layout_about_title">关于</string>
    <string name="layout_about_current_version">当前版本</string>
    <string name="layout_about_author">作者</string>
    <string name="layout_about_qq_personal">QQ号</string>
    <string name="layout_about_qq_group">QQ群号</string>
    <string name="layout_about_bilibili">bilibili</string>
    <string name="layout_about_core_source">内核源码</string>
    <string name="layout_about_app_source">软件源码</string>
    <string name="layout_about_release_note">更新日志</string>
    <string name="layout_about_latest_release_note">最新版更新日志</string>
    <string name="layout_about_issue">问题反馈</string>
    <string name="layout_about_donate">赞助 请我喝杯奶茶awa</string>
    <string name="layout_about_privacy_policy">隐私政策</string>
    <string name="layout_about_open_source_terms">开源条款</string>
    <string name="layout_completion_welcome">欢迎使用CHelper</string>
    <string name="layout_completion_author">作者：Yancey</string>
    <string name="layout_completion_command_hint">点我输入文字</string>
    <string name="layout_completion_icon_show_menu_content_description">显示或隐藏菜单</string>
    <string name="layout_completion_undo">撤回</string>
    <string name="layout_completion_icon_undo_content_description">撤回</string>
    <string name="layout_completion_redo">恢复</string>
    <string name="layout_completion_icon_redo_content_description">恢复</string>
    <string name="layout_completion_clear">清空</string>
    <string name="layout_completion_icon_clear_content_description">清空</string>
    <string name="layout_completion_history">历史</string>
    <string name="layout_completion_icon_history_content_description">历史</string>
    <string name="layout_completion_local_library">命令库</string>
    <string name="layout_completion_icon_local_library_content_description">命令库</string>
    <string name="layout_completion_shut_down">关闭</string>
    <string name="layout_completion_icon_shut_down_content_description">关闭</string>
    <string name="layout_enumeration_title">穷举</string>
    <string name="layout_enumeration_expression_hint">请在这里输入表达式\n例:/say \"${sin(x+y)/3,int} ${x+1,float}\"\nint为整数,float为小数</string>
    <string name="layout_enumeration_times_label">次数：</string>
    <string name="layout_enumeration_variable_name">变量名</string>
    <string name="layout_enumeration_initial_value">初始值</string>
    <string name="layout_enumeration_interval">每次增加</string>
    <string name="layout_enumeration_add_variable">增加变量</string>
    <string name="layout_enumeration_run">运行</string>
    <string name="layout_enumeration_icon_clear_content_description">清空</string>
    <string name="layout_favorite_history">历史</string>
    <string name="layout_home_app_name">CHelper</string>
    <string name="layout_home_app_description">我的世界基岩版命令助手</string>
    <string name="layout_home_command_completion">命令补全</string>
    <string name="layout_home_command_completion_app_mode">应用模式</string>
    <string name="layout_home_command_completion_floating_window_mode">悬浮窗模式</string>
    <string name="layout_home_command_completion_settings">设置</string>
    <string name="layout_home_old2new">旧版本命令转新版本命令</string>
    <string name="layout_home_old2new_app_mode">应用模式</string>
    <string name="layout_home_old2new_ime_mode">输入法模式</string>
    <string name="layout_home_enumeration">穷举</string>
    <string name="layout_home_enumeration_app_mode">穷举</string>
    <string name="layout_home_experimental_feature">实验性功能</string>
    <string name="layout_home_experimental_feature_local_library">本地命令库</string>
    <string name="layout_home_experimental_feature_public_library">公有命令库（待开放）</string>
    <string name="layout_home_experimental_feature_raw_json_studio">原始Json文本生成器（未完工，期待有人接手）</string>
    <string name="layout_home_about">关于</string>
    <string name="layout_home_about_app_mode">关于</string>
    <string name="layout_library_edit_title_add">添加</string>
    <string name="layout_library_edit_title_edit">编辑</string>
    <string name="layout_library_edit_title_upload_with_need_review">上传（需审核）</string>
    <string name="layout_library_edit_title_update_with_need_review">更新（需审核）</string>
    <string name="layout_library_edit_name_label">名字：</string>
    <string name="layout_library_edit_version_label">版本：</string>
    <string name="layout_library_edit_version_hint">格式为x.x.x</string>
    <string name="layout_library_edit_author_label">作者：</string>
    <string name="layout_library_edit_description_label">介绍：</string>
    <string name="layout_library_edit_tags_label">标签：</string>
    <string name="layout_library_edit_tags_hint">不同标签使用英文逗号分割</string>
    <string name="layout_library_edit_commands_hint">类似mcfunction，每一行一个命令或一个注释：\n# 给我2个苹果\n/give @s apple 2\n# 在坐标(0, 0, 0)处放置一个钻石块\nsetblock 0 0 0 minecraft:diamond_block</string>
    <string name="layout_library_edit_preview">预览</string>
    <string name="layout_library_edit_save">保存</string>
    <string name="layout_library_edit_upload">上传</string>
    <string name="layout_library_edit_update">更新</string>
    <string name="layout_library_edit_delete">删除</string>
    <string name="layout_library_list_title_local">本地命令库</string>
    <string name="layout_library_list_title_public">公有命令库（待开放）</string>
    <string name="layout_library_list_icon_import_content_description">导入</string>
    <string name="layout_library_list_icon_export_content_description">导出</string>
    <string name="layout_library_list_icon_add_content_description">添加</string>
    <string name="layout_library_list_icon_update_content_description">更新</string>
    <string name="layout_library_list_icon_upload_content_description">上传</string>
    <string name="layout_library_list_icon_edit_content_description">编辑</string>
    <string name="layout_library_list_search_hint">搜索命令库</string>
    <string name="layout_library_list_library_author_formatter">作者：%1$s</string>
    <string name="layout_library_show_version_label">版本：</string>
    <string name="layout_library_show_author_label">作者：</string>
    <string name="layout_library_show_description_label">介绍：</string>
    <string name="layout_library_show_tags_label">标签：</string>
    <string name="layout_library_show_loading">加载中</string>
    <string name="layout_library_login_title">登录</string>
    <string name="layout_library_login_account_label">账号：</string>
    <string name="layout_library_login_account_hint">请输入手机号/邮箱</string>
    <string name="layout_library_login_password_label">密码：</string>
    <string name="layout_library_login_icon_clear_account_content_description">清空账号</string>
    <string name="layout_library_login_icon_hide_password_content_description">显示或隐藏密码</string>
    <string name="layout_library_login_register">马上注册</string>
    <string name="layout_library_login_forget_password">忘记密码？</string>
    <string name="layout_library_login_confirm_check_before_login">请先勾选再登录</string>
    <string name="layout_library_login_login">登录</string>
    <string name="layout_library_login_logging">正在登录中</string>
    <string name="layout_library_login_varification_failed">请输入正确的账号和密码</string>
    <string name="layout_library_login_successfully">登录成功</string>
    <string name="layout_library_login_failed">邮箱或密码错误</string>
    <string name="layout_library_login_agree_user_policy">登录即表示同意CHelper《用户协议》与《隐私政策》</string>
    <string name="layout_library_register_title">注册</string>
    <string name="layout_library_register_account_label">账号：</string>
    <string name="layout_library_register_account_hint">请输入手机号/邮箱</string>
    <string name="layout_library_register_password_label">密码：</string>
    <string name="layout_library_register_icon_clear_account_content_description">清空账号</string>
    <string name="layout_library_register_icon_hide_password_content_description">显示或隐藏密码</string>
    <string name="layout_library_register_confirm_check_before_register">请先勾选再注册</string>
    <string name="layout_library_register_next_step">下一步</string>
    <string name="layout_library_register_varification_failed">请输入正确的账号和密码</string>
    <string name="layout_library_register_successfully">注册成功</string>
    <string name="layout_library_register_failed">邮箱或密码错误</string>
    <string name="layout_library_register_agree_user_policy">注册即表示同意CHelper《用户协议》与《隐私政策》</string>
    <string name="layout_old2new_title">旧版本命令转新版本命令</string>
    <string name="layout_old2new_old_command_hint">请输入1.18版本的命令，下方会显示转换成的1.20命令（方块数据值转方块状态，execute、setblock、fill、summon、structure命令转新语法）</string>
    <string name="layout_old2new_clear_and_paste_old_command">清空并粘贴旧命令</string>
    <string name="layout_old2new_copy_new_command">复制新命令</string>
    <string name="layout_old2new_ime_undo">撤回</string>
    <string name="layout_old2new_ime_guide_title">命令转换输入法</string>
    <string name="layout_old2new_ime_guide_guide">支持1.18版本命令转1.20版本命令（方块数据值转方块状态，execute、setblock、fill、summon、structure命令转新语法）。使用该输入法点击输入框即可自动转换，点击弹出的按钮可进行撤回。</string>
    <string name="layout_old2new_ime_guide_step1">第一步：进入设置启用输入法</string>
    <string name="layout_old2new_ime_guide_step2">第二步：切换输入法</string>
    <string name="layout_old2new_ime_guide_not_support">你的系统不支持使用第三方输入法</string>
    <string name="layout_rawtext_title">原始Json文本生成器</string>
    <string name="layout_rawtext_text_hint">请输入文字，选择要上色的文字，点击对应颜色即可上色</string>
    <string name="layout_rawtext_copy">复制</string>
    <string name="layout_rawtext_preview">预览</string>
    <string name="layout_rawtext_color">颜色</string>
    <string name="layout_settings_title">设置</string>
    <string name="layout_settings_application_update">软件更新</string>
    <string name="layout_settings_is_enable_update_notification">启用新版本提醒</string>
    <string name="layout_settings_is_enable_update_notification_description">把软件保持在最新版本，有助于获得更好的体验</string>
    <string name="layout_settings_theme_settings">外观设置</string>
    <string name="layout_settings_choose_background">选择背景图片</string>
    <string name="layout_settings_choose_background_description">从相册导入图片作为背景</string>
    <string name="layout_settings_restore_background">背景复原</string>
    <string name="layout_settings_restore_background_description">使用自带背景</string>
    <string name="layout_settings_choose_theme">选择主题</string>
</resources>