<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow_back_up"
                android:contentDescription="@string/layout_completion_icon_undo_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_undo"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow_forward_up"
                android:contentDescription="@string/layout_completion_icon_redo_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_redo"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/x"
                android:contentDescription="@string/layout_completion_icon_clear_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_clear"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/history"
                android:contentDescription="@string/layout_completion_icon_history_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_history"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_local_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/box"
                android:contentDescription="@string/layout_completion_icon_local_library_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_local_library"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_shut_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/power"
                android:contentDescription="@string/layout_completion_icon_shut_down_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/layout_completion_shut_down"
                android:textColor="@color/text_main"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>