<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_20dp_no_translate"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_policy_grant_title"
        android:textColor="@color/text_bond"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="20dp"
        android:text="@string/dialog_policy_grant_message_if_unread"
        android:textColor="@color/text_main"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/confirm_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_policy_grant_confirm_read"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">

        <TextView
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_policy_grant_read_privacy_policy"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_policy_grant_confirm"
            android:textColor="@color/main_color"
            android:textSize="20.0sp" />
    </LinearLayout>
</LinearLayout>
