<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_20dp_no_translate"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_input_string_title"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="no"
        android:background="@drawable/bg_corner_10dp"
        android:gravity="center"
        android:hint="@string/dialog_input_string_input_hint"
        android:inputType="text"
        android:minWidth="200dp"
        android:padding="10dp"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_hint"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_input_string_cancel"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_input_string_confirm"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
